Убрать сортировку в методе GET /api/all